k8s/base/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-server-blue-svc
  labels:
    color: blue
spec:
  type: ClusterIP
  selector:
    app: spring-server
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
