k8s/base/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-server-green-svc
  labels:
    color: green
spec:
  type: ClusterIP
  selector:
    app: spring-server
    color: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
